--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Multi-Store",
+  "name": "multi-store",
   "version": "1.0.0",
   "description": "Api para controle de venda/estoque de produtos e cadastro/prestação de serviços",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "npx nodemon",
+    "dev": "npx nodemon",
     "start": "npm run build && node build/index.js"
   },
   "repository": {
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/TandyFW/Multi-Store#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
